--- a/www/inicio.html
+++ b/www/inicio.html
@@ -15,8 +15,20 @@
     <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png" media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)" />
     <title>COTACAO</title>
     <!--CSS DE ESTILOS-->
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <!--<script type="text/javascript" charset="utf-8" src="../cordova_plugins.js"></script>-->
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script><!--SCRIPTS BASICOS-->
+    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+    <script type="text/javascript" src="scripts/jquery-2.2.1.min.js"></script>
+    <script type="text/javascript" src="scripts/jqueryui.js"></script>
+    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
+    <script type="text/javascript" src="scripts/my.accounting.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery.price_format.2.0.min.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/modal.js"></script>
+    <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
+    <script type="text/javascript">app.initialize();</script>
+    <!--SCRIPTS DE PÁGINAS-->
+    <script type="text/javascript" src="scripts/paginas/inicio.js"></script>>
+    <!--<script type="text/javascript" charset="utf-8" src="cordova_plugins.js"></script>-->
 
     <link href="styles/bootstrap.css" rel="stylesheet" />
     <link href="styles/style.css" rel="stylesheet" type="text/css">
@@ -191,19 +203,7 @@
         </div>
 
 </div>
-    <!--SCRIPTS BASICOS-->
-    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
-    <script type="text/javascript" src="scripts/jquery-2.2.1.min.js"></script>
-    <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
-    <script type="text/javascript" src="scripts/my.accounting.min.js"></script>
-    <script type="text/javascript" src="scripts/jquery.price_format.2.0.min.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
-    <script type="text/javascript" src="scripts/modal.js"></script>
-    <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
 
-    <!--SCRIPTS DE PÁGINAS-->
-    <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
 
 
 
